# lf-pico-uc-template

./: .gitignore  CMakeLists.txt  README.md  shell.nix
.github/actions/run-tests/: action.yml
.github/workflows/: ci.yml
src/: Blink.ulf  BlinkStatus.lf  HelloPico.lf  HelloPico.ulf  TestFed.ulf  Timer.lf  Timer.ulf
src/lib/: Led.lf  Led.ulf  StatusLed.lf
